ru-RU and uk-UA resources

--- a/Calendar/Calendar.Shared/Strings/ru-RU/Resources.resw
+++ b/Calendar/Calendar.Shared/Strings/ru-RU/Resources.resw
@@ -199,10 +199,7 @@
     <value>укажите, за сколько дней до события показывать напоминание, и период повторения в течение дня (часы).</value>
   </data>
   <data name="ApplicationDescription" xml:space="preserve">
-    <value>Обновленный календарь с живой плиткой, большими наборами государственных*, международных и религиозных** праздников. Этот календарь всегда поможет вам найти повод для праздника! 
-
-*праздники для государств: Украина, Россия, Беларусь, Казахстан, Грузия.
-**основные праздники католического и православного календаря (в том числе передвижные).</value>
+    <value>Обновленный календарь с живой плиткой, большими наборами государственных, международных и религиозных праздников. Этот календарь всегда поможет вам найти повод для праздника!</value>
   </data>
   <data name="ApplicationDisplayName" xml:space="preserve">
     <value>Календарь + Праздники</value>
