--- a/Calendar/Calendar.Shared/Strings/uk-UA/Resources.resw
+++ b/Calendar/Calendar.Shared/Strings/uk-UA/Resources.resw
@@ -183,7 +183,7 @@
   <data name="textTile.Text" xml:space="preserve">
     <value>Втримати у пам'яті всі важливі дати майже неможливо. І як же зручно, коли поряд є друг, який нагадає про завтрашню зустріч! Але раптом він і сам забуде? От лихо ...
 
-З цим завданням чудово впорається жива плитка. Вона нагадає і про зустріч ыз товаришем, і про те, яке сьогодні свято. Тепер вам буде що відзначити за чашкою кави!</value>
+З цим завданням чудово впорається жива плитка. Вона нагадає і про зустріч із товаришем, і про те, яке сьогодні свято. Тепер вам буде що відзначити за чашкою кави!</value>
   </data>
   <data name="tileOff.Content" xml:space="preserve">
     <value>вимкнути</value>
@@ -201,12 +201,7 @@
     <value>вкажіть, за скільки днів до події показувати нагадування, і період повторення протягом дня (у годинах).</value>
   </data>
   <data name="ApplicationDescription" xml:space="preserve">
-    <value>Дана версія додатку знаходиться у стадії доробки. Якщо у Вас виникли проблеми, будь ласка, надішліть їх опис на поштову адресу служби підтримки: syanne.red@gmail.com.
-
-Оновлений календар з живою плиткою, великими наборами державних*, міжнародних та релігійних** свят. Цей календар завжди допоможе вам знайти файний привід для святкування!
-
-* свята для: України, Росії та Польші (в українській версії);
-** основні свята католицького і православного календаря (у тому числі пересувні).</value>
+    <value>Оновлений календар з живою плиткою, великими наборами державних, міжнародних та релігійних свят. Цей календар завжди допоможе вам знайти файний привід для святкування!</value>
   </data>
   <data name="ApplicationDisplayName" xml:space="preserve">
     <value>Календар + Свята BETA</value>
